# ml-inference-service

./: .gitignore  README.md  pyproject.toml
benchmarks/: results.md
docker/: Dockerfile  docker-compose.yml
grafana/: dashboard.json
k8s/: deployment.yaml
load_tests/: locustfile.py
src/: __init__.py
src/monitoring/: __init__.py  metrics.py
src/optimization/: __init__.py  caching.py  quantization.py
src/server/: app.py  batching.py  block_manager.py  inference.py  scheduler.py  sequence.py
tests/: test_inference.py  test_scheduler.py
